--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@ body {
 
 /* Header */
 
-.nav-list {
+.nav-item {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 14px;
@@ -60,8 +60,8 @@ body {
 .header-contacts:hover,
 .footer-contacts:focus,
 .footer-contacts:hover,
-.nav-list .link:focus,
-.nav-list .link:hover {
+.nav-item:focus,
+.nav-item:hover {
   color: var(--accent-text-color);
 }
 
